# college-compass

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  college_compass_cli.py  college_compass_free.py  college_compass_pro.py  college_finder_cli.py  college_finder_free.py  college_finder_pro.py  env.template  install-free.sh  install-pro.sh  pyproject.toml
.cursor/rules/: college-finder.mdc
config/: pro.json.example
data/: college_research_cache.json
docs/: ARCHITECTURE.md  ENHANCEMENT.md  Install-prerequisites.md  PROFILE_AND_CONFIG.md  Quickstart-free.md  Quickstart-pro.md  RESEARCH_AGENT.md  TECHNICAL.md  diagram-technical.html  pipeline-overview.html
research_assist/: README.md  manual_cache_inject.py
scripts/: _paths.py  acceptance_data.py  auto_research_colleges.py  build_gap_analysis.py  build_profile_input_xlsx.py  build_selection_sheet.py  cache_sync.py  catalog_bootstrap.py  catalog_refine.py  college_catalog.py  college_finder.py  college_research.py  discover_colleges.py  discovery_quality.py  export_gap_analysis_html.py  extract_student_docs.py  fit_categories.py  llm_discover.py  load_profile.py  output_paths.py  pipeline.py  pro_config.py  profile_fields.py  program_admit.py  research_colleges.py  run.py  run_log.py  scorecard_api.py  us_news_lookup.py  validate_cache.py
students/alex-sample/: README.md
students/alex-sample/data/: college_matches.json  college_matches.md
students/alex-sample/input/: Plan for Senior Year.txt  student profile input.xlsx  ~$student profile input.xlsx
(+3 files in other folders)
